# awesome-audio

./: .gitignore  CHANGELOG.md  Makefile  README.md  form.py  md_to_yml.py  pyproject.toml  python-in-music.md  requirements.txt  ui.py
.github/workflows/: ci.yml  links.yml  release.yml
data/: entries.json  entries.yml
docs/: README.md  changelog.md  index.md
docs/cli/: commands.md  overview.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
research/: python-in-music.md  python-in-music.yml
research/morphagene/: README.md  mg-convert.sh  mgreel.js  morphagene_ableton.py  morphagene_ableton3.py  morphagene_audacity3.py  morphagene_batch.py  morphagene_logic.py  morphagene_onset3.py  morphagene_sample_splitter.py  wavcue.py
research/morphagene/wave_markers/: add_markers.py  dump_wav.py
research/morphagene/wave_markers/wavelib/: wave.py  wavfile.py
scripts/: collect_yml.py  curator.py  md_to_yml.py  sort.py
src/: __init__.py  checker.py  cli.py  generator.py  github.py  importer.py  model.py  schema.py  stopwords.py
tests/: __init__.py  conftest.py  test_checker.py  test_cli.py  test_generator.py  test_github.py  test_importer.py  test_model.py  test_schema.py
